# 2026-PNU-gradproject-adaptive-passthrough-xr

./: .gitignore  README.md
ml-dynamic-object/: IMPLEMENTATION.md  README.md  pyproject.toml  run_camera.cmd  run_mock.cmd  setup_windows.cmd
ml-dynamic-object/examples/: run_mock_demo.py  run_usb_camera.py
ml-dynamic-object/scripts/: export_person_model.py
ml-dynamic-object/src/graduate_risk_mvp/: __init__.py  camera.py  detector.py  factory.py  interfaces.py  location.py  models.py  motion.py  output.py  pipeline.py  risk.py  tracker.py
ml-dynamic-object/tests/: test_camera.py  test_location.py  test_motion.py  test_opencv_detector.py  test_output_files.py  test_pipeline.py  test_risk_estimator.py  test_tracker.py
ml-personalization/: README.md
ml-personalization/data/: mock_events.csv  mock_features.csv  mock_sessions.csv
ml-personalization/models/: rf_personalization.joblib  rf_personalization.onnx
ml-personalization/src/: build_features.py  convert_to_onnx.py  generate_mock_logs.py  train_model.py
unity-client/: PROTOTYPE_DETAILS.md  README.md
unity-client/Assets/Oculus/: OculusProjectConfig.asset
unity-client/Assets/Resources/: DevAgentSettings.asset  OculusRuntimeSettings.asset
unity-client/Assets/Scripts/: QuestBoundaryLogger.cs  QuestSceneDistanceLogger.cs
unity-client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity-client/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity-client/Assets/_Recovery/: 0 (1).unity  0.unity
unity-client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+2 files in other folders)
