[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graduate-risk-mvp"
version = "0.1.0"
description = "Hardware-independent MVP for camera-based relative location and risk estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
camera = [
    "opencv-python>=4.10,<5",
    "onnxruntime>=1.20,<2",
]
model-export = [
    "ultralytics>=8.3,<9",
    "onnx>=1.17,<2",
    "onnxslim>=0.1.82,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]
